Removed Width on HTML selector on CSS to remove horizontal scroll bug

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 html {
     font-size: 16px;
-    width: 100vw;
 }
 
 body {
